# DCI-Agent-Lite

./: .env.template  .gitignore  README.md  pyproject.toml  setup.ps1  setup.sh
assets/docs/: benchmark.md  cli-reference.md  groq.md  running.md  setup.md
data/: bcplus_sampled_100_qa.jsonl
docs/: analysis.md  artifacts.md  benchmark.md  pi_agent_benchmark.md  running.md  setup.md
prompts/: system_prompt.txt
scripts/: download_bcplus_qa.py  download_corpus.py  extract_bcplus_fix_100_qa.py  run_bcplus_eval.sbatch  upload_bcplus_eval_hf.py
scripts/bcplus_eval/: analyze_resolution.py  commands.sh  extract_bcplus_qa.py  run_bcplus_eval.py  run_bcplus_eval_100.py  run_bcplus_eval_100.sh  run_bcplus_eval_100_anthropic.sh  run_bcplus_eval_100_openai.sh  run_bcplus_eval_100_vllm.sh  run_bcplus_eval_groq.sh  run_level0.sh  run_level1.sh  run_level1_read_grep.sh  run_level1_read_grep_openai.sh  run_level3.sh
scripts/beir/: run_arguana.sh  run_fiqa.sh  run_nfcorpus.sh  run_scidocs.sh  run_scifact.sh  run_trec_covid.sh
scripts/bright/: run_bio.sh  run_earth_science.sh  run_economics.sh  run_robotics.sh
scripts/examples/: dci_basic_anthropic_example.sh  dci_basic_groq_example.sh  dci_basic_openai_example.sh  dci_basic_vllm_example.sh  dci_runtime_context_example.sh  hrci_basic_anthropic_example.sh  hrci_basic_example.sh  hrci_basic_openai_example.sh  hrci_basic_vllm_example.sh  hrci_conversation_level1.sh  hrci_conversation_level2.sh  hrci_conversation_level3.sh  hrci_conversation_level4.sh  hrci_conversation_level5.sh  hrci_print_pi_system_prompt.sh  (+17 more)
(+67 files in other folders)
