[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hrci"
version = "0.1.0"
description = "High Resolution Corpus Interaction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.91.0",
    "datasets",
    "httpx>=0.28.1",
    "huggingface-hub",
    "matplotlib",
    "numpy",
    "pyarrow",
    "scipy",
    "tqdm",
]

[project.scripts]
hrci-export-bc-plus-docs = "hrci.benchmark.export_bc_plus_docs:main"
hrci-run-pi-rpc = "hrci.benchmark.pi_rpc_runner:main"
hrci-print-pi-system-prompt = "hrci.benchmark.pi_system_prompt:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hrci"]
